--- a/project.properties
+++ b/project.properties
@@ -12,7 +12,16 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=..\\..\\Android Libraries\\sugared-list-animations-master
-android.library.reference.2=..\\..\\Android Libraries\\ActionBarSherlock-master\\actionbarsherlock
+android.library.reference.1=..\\..\\Android Libraries\\ActionBarSherlock-master\\actionbarsherlock
+android.library.reference.2=..\\..\\Android Libraries\\ProgressWheel-master
 android.library.reference.3=..\\..\\Android Libraries\\android-menudrawer-master\\menudrawer
-android.library.reference.4=../../Android Libraries/google-play-services_lib
+android.library.reference.4=..\\..\\Android Libraries\\google-play-services_lib
+android.library.reference.5=..\\..\\Android Libraries\\sugared-list-animations-master
+android.library.reference.6=..\\..\\Android Libraries\\ShowcaseView-master\\library
+android.library.reference.7=..\\..\\Android Example Projects\\AndroidSlidingListVIew\\swipelistview
+android.library.reference.8=..\\..\\Android Libraries\\Crouton-master\\library\\src\\main
+android.library.reference.9=..\\..\\Android Libraries\\Android-ViewPagerIndicator-master\\library
+android.library.reference.10=..\\..\\Android Libraries\\Inscription-master\\library
+android.library.reference.11=..\\..\\Android Libraries\\Android-HomeKey-Locker-master\\HomeLockerLib\\src\\main
+android.library.reference.12=..\\..\\Android Libraries\\ActionBar-PullToRefresh-master\\extras\\actionbarsherlock\\src\\main
+android.library.reference.13=../../Android Example Projects/SmoothProgressBar-master/library/src/main
