--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -74,13 +74,13 @@
         <activity android:excludeFromRecents="true"
             android:launchMode="singleInstance"
             android:name="IncomingCall"
-            android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
+            android:screenOrientation="portrait"/>
         <activity android:configChanges="orientation"
             android:label="@string/tutorial_name" android:name="com.autodialer.MainActivity"/>
         <activity android:excludeFromRecents="true"
             android:launchMode="singleInstance"
             android:name="com.autodialer.TakeNote" android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait" android:taskAffinity="" android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
+            android:screenOrientation="portrait" android:taskAffinity="" />
         <activity
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
@@ -105,6 +105,6 @@
             android:launchMode="singleInstance"
             android:name="org.acra.CrashReportDialog" android:theme="@android:style/Theme.Dialog"/>
         <!--created by User at 2014-05-14 21:54:22-->
-        <activity android:name=".TakeNoteIncomingCall" android:taskAffinity="" android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity android:name=".TakeNoteIncomingCall" android:taskAffinity=""  android:launchMode="singleInstance"/>
     </application>
 </manifest>
